--- a/quizgame.css
+++ b/quizgame.css
@@ -1,6 +1,5 @@
 * {
     box-sizing: border-box;
-   /* background-color:whitesmoke; */
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    
     
@@ -26,7 +25,14 @@ body {
     background-color: whitesmoke;
 
 }
-
+start-container{
+    width: 800px;
+    max-width: 80%;
+    justify-content: center;
+    background-color: rgb(54, 201, 164);
+    border-radius: 5px;
+    padding: 10px;
+}
 .container {
     width: 800px;
     max-width: 80%;
@@ -34,7 +40,7 @@ body {
     background-color: rgb(54, 201, 164);
     border-radius: 5px;
     padding: 10px;
-    box-shadow 0 0 10px 2px;
+    
 }
 
 .button-grid {
@@ -48,8 +54,14 @@ body {
     background-color: rgb(230, 34, 132);
     color: rgb(54, 201, 164);
     border: 2px black; 
-
+    
 }
-#score{
-    text-align: right;
+scorecontainer{
+    width: 800px;
+    max-width: 80%;
+    justify-content: center;
+    background-color: rgb(54, 201, 164);
+    border-radius: 5px;
+    padding: 10px;
+    color :  rgb(230, 34, 132);
 }
