--- a/quizgame.css
+++ b/quizgame.css
@@ -10,6 +10,7 @@ h1 {
     background-color: rgb(54, 201, 164);
     text-align: center; 
     color:rgb(230, 34, 132);
+    border-radius: 5px ;
 
     
 }  
